--- a/clusters/production/monitoring/grafana/secrets.sops.yaml
+++ b/clusters/production/monitoring/grafana/secrets.sops.yaml
@@ -4,24 +4,23 @@ metadata:
     name: grafana
     namespace: default
 stringData:
-    GF_SMTP_ENABLED: ENC[AES256_GCM,data:WLAzog==,iv:GyqBEIX0G1DcWqv/QX3x4VsXNWtTUQ+GUcQ7+vDlu3k=,tag:0ZQq9H7kVSZhfvfVaBkvUg==,type:str]
-    GF_SMTP_HOST: ENC[AES256_GCM,data:oNeXIk0ZFHqfHiafjlo=,iv:mMAOQQBN4bIeWjysz7XMn8ZsNWvESxNdcZnahVPNtFs=,tag:N7RFP0of03/KmeWI9il+Ww==,type:str]
-    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:O6wzxi9tOfYVHzIsQnU=,iv:lsUfJ/e7uQVrwlWF+zHJcdeSZj6oSy2jfIfMHUXYQH8=,tag:jyrpZXVKwZCEuT7s+pQcAQ==,type:str]
-    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:S1e1RwEfXA==,iv:CXqfMzmP00Q7zGE2vyOHPzmka6Lj6ojZliBSbc4GEEI=,tag:OADhr9pwVhzyiqMgqWUljQ==,type:str]
-    GF_SMTP_SKIP_VERIFY: ENC[AES256_GCM,data:lURAkg==,iv:QSXeBxPcgQE3xZTcLLFtkZSdT+Qk1lJjnaVxc+8N74A=,tag:TLG6LnE/0FqIQh+it3i07g==,type:str]
-    GF_DATABASE_USER: ENC[AES256_GCM,data:Zmie/NEyQA==,iv:PN2lmuBzAQD15P+hBtNqj82+lOufpebPDv9ilccp428=,tag:bys03oz4BgCvXg6RbWoiBA==,type:str]
-    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:8MdpZQyvdg==,iv:u1PfxP9A45w2TAKv0vAWoHHNgGJ5aK6x9LnZKG8IfLQ=,tag:SRq2WpLAlOB25sy1O+MOvw==,type:str]
-    GF_AUTH_OAUTH_ALLOW_INSECURE_EMAIL_LOOKUP: ENC[AES256_GCM,data:w9miSw==,iv:qagP7d3j5F/WNsZiHzax9AAUACQI8emLKCvbpy3FCss=,tag:nsjvclKCfjRc1chHWfWv0A==,type:str]
-    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:AGSthrEa,iv:XWzS80YFHmZoAk3YIlrC6nfC9ZXC0+W95IHITXl78tE=,tag:rr2fVJ8AxVFH7pxy1Yj7Dw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:OaTOYA==,iv:u7lotNLNiT4CuFVK7DJheuafOujOBKFKJxHUs1spzW4=,tag:I9R6nMIiD4jrRlJgYCkuBw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:tZ4624A=,iv:gyUf/ew9z0IkTcUc4kemRVLw3wnLLa1CsbzJVd3WYzM=,tag:yahR43Kuwn38QikZn8Mhww==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:jDo8gsb6LH8VegOKs14IEHAM9CxNh14PH1Udaww=,iv:1adI3srphjBBjb+FfTaZbi9+zLd3xgSW+USbURu0eSU=,tag:cDKyor4dCET80axwkpsgYw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:qtOegEhhv5Jb/fJtLS6oCVsgvm8YpdUwpG/Ug2v2Iq/gvsyo,iv:kUEvXM57aoRzRu2MNOOuUNgxvulm9bJmIjPsHxmXLOI=,tag:XeXdtSbLEQVuR4Docc0/Sg==,type:str]
-    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:a+zKJBkmYxTCbALabPj/+IoJZKA=,iv:nky4BN3eI7uoc1/i7H/c4/Rd8FnvedANZ46y069Gd6E=,tag:LYHlDCLIz6wo6gaZ/WJByw==,type:str]
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:LqoD9vnHS2chnkWirY0Zl9J/NiWfUvZyoKy5Uydg3wl9ttpPca1kyy6n7aIt,iv:6VIGJ/2jl9OctUU4Uk+DGavQzsapDDApeuJoShMWFnM=,tag:2RqcZUGAv7qZw1Wx4u4/eQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:NB4zdpe5r+RD4f0nNEOOb9Y4u/35zBfg5XPceWrv/1LfyG1ks9oU3Oc=,iv:eSE7yKbGymbaWzOEV3vnSSkCAdsTGkMWWV9tB6mtsT0=,tag:EVajM/BtJL82N1wbSyB8oA==,type:str]
-    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:Loze7EQm7tvKF/hzVUfSE7FeDjvK9ZUrk6dSAF1w231egZHhjFlyug5Pn+A=,iv:Jt4TAumAOGnvRXUYK+WPA00KoPbFnrqVdPTPNo2SSF4=,tag:D1YpoiCKw8ngTFWT+66bnQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_SKIP_ORG_ROLE_SYNC: ENC[AES256_GCM,data:VZv6Pg==,iv:3E3tGZ9vrqEUseIYEXGI62rq9wN4mMR0OcbDiv7gHHs=,tag:mSGhvHJVH7JRTx/f4ahs9w==,type:str]
+    GF_SMTP_ENABLED: ENC[AES256_GCM,data:8D2GnA==,iv:tT7H2HZqJkpQEBhSMeVCeAtx6k07eoW4aZpl+hzmutA=,tag:/tnQFi5eN/MY3u0FC9MKuA==,type:str]
+    GF_SMTP_HOST: ENC[AES256_GCM,data:PlCXVkHJnP0XXP1svgoGBUWB,iv:wjb2C0qYlSJ1jR8zmlj97SjW2IA6cv/NK4367Y5P910=,tag:xNVDlKq10e0xO3v54xt7uw==,type:str]
+    GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:KME7oN1cyNyv3N0poxg=,iv:VzbIrdNlG+PAAZVBgyEutWhId620u3+huMAHKDoKpFE=,tag:B7SR/lpDPcBaKMeeo1s03Q==,type:str]
+    GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:2FpfzzYwCfR4Fw==,iv:Uq8LFn91EfkACQ+KY7YeexXu8oyGgYVmW8O0hwmabK0=,tag:MSZm+o0g7B1VG6VEXO8VUg==,type:str]
+    GF_DATABASE_USER: ENC[AES256_GCM,data:eRPbXu6F1A==,iv:G8mfKcdL2VN80iRs4TkErR8M2ckeJxIgiB8OzCnDsEs=,tag:nHLkCx7/veQLGF5OQ//I2A==,type:str]
+    GF_DATABASE_PASSWORD: ENC[AES256_GCM,data:sQt2jgBEuw==,iv:cS1pjv4PJuFqm+LqkpSxMBCN01JxkC1vTRx3Re4He98=,tag:LaYarOeCsBvcJp8fM93Qlg==,type:str]
+    GF_AUTH_OAUTH_ALLOW_INSECURE_EMAIL_LOOKUP: ENC[AES256_GCM,data:U9x2Yw==,iv:PjbPnfd8IycPcOLOwsAkuXctBvfAzUo9DKUHZ1EQTxc=,tag:Jl3bDakIONKIARRYlVTVAw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_NAME: ENC[AES256_GCM,data:4Jvt7uU7,iv:P9NvrsDk8xC/eoAifLrXoAA6eOgJkoeByzFu4RIbewA=,tag:1KPSQKrmrfNabGLcyL+yVw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ENABLED: ENC[AES256_GCM,data:FH1lbQ==,iv:bn1JJJowL+7Tvw8f/N6CuTHAeSQ8WYAdByeukiEZ2OA=,tag:4/MzC06bmQNYPl5+gt+anQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP: ENC[AES256_GCM,data:gnvfpjY=,iv:c4S4/XVSJbxSi1cKfSGzERk8lJq1W3Z02KzpCdrYBYA=,tag:kwZ6nGrslV4Rj1SgqzbD4g==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:eonrwRaiKPON1E41CwYLNiiyFSUVl0ldWctVw8o=,iv:lOnxUs6SyPwi9b4KbpwfoQgIgRctFWAvk00Merra560=,tag:wl1P8FrNr4b2y3g9/2YPQA==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:ESc7wqrIvXm9nowyL0riShpr6yMUqsPOhdxrujIFTew4vOxk,iv:nx1uxHbcalOzDXcrVUasvl1dY7IyX4JfqwbpLRotZTE=,tag:fLN0jgzblnTo736oOgfRzg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SCOPES: ENC[AES256_GCM,data:NYhnsfZKrr8JMh7GPn7WKs30AwU=,iv:rmhyHKw4O0uY8i484Aq6N0NFX5dBbP2Ay34A5VpQEvU=,tag:HAurxYW2rlIZDWqdwPc+8A==,type:str]
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:KIzCj12nTKHaQNlPYu8zTU0vKKDh+BBOJV1cBBiHqFh+Yi9I4cNPoCCjqt2k,iv:K2bQ4BxAXJDV5Sx6+vQOr4Kw/t4xIPlaNQ5Bxkxl1ns=,tag:PcVMjjelp7MIG2T/uI92HQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:UNFf5XTNoGhkfEznCKWb1u1NSIEFcQsMO+MxIlF4c7IDTucKMxBBbJI=,iv:v1X4FWY66q2eQCH2PzuiUoRkwZnBPQv65yL38056Lpg=,tag:AycVQaiwDrk7XXeIyzNsmQ==,type:str]
+    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:Ch6SkFr4P8oWH/reBVo7j1VOQggTQODtxwMGN5tHR0TtRTd9UyP/pKSYSQQ=,iv:IhIaz0pUUEbk3OCMTvfjI7KOAKsKUwqNmBlir7V3+VA=,tag:v3RrS0P3q5iC/7Zae49y0w==,type:str]
+    GF_AUTH_GENERIC_OAUTH_SKIP_ORG_ROLE_SYNC: ENC[AES256_GCM,data:oAvf0g==,iv:/06n+HvWbLHieSC9wUtRyqpSKTNpFhpbok8PlscEqVY=,tag:U0cCZl3bE9cO0OvDsXyKzQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -31,14 +30,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlMzZLTmVTai9HMHRBSGp0
-            MWdZU2Zjd0t3M1JiMEdBSU4vWW5NS3k2Y2xrClJKZkdIb2Z3V0lsVlhtcERIRVAz
-            VFZ3bDdYakJwcUxwYVNYSlNobENyekEKLS0tIFFjalhNNWR3WTFVNWdwMlEwUmVK
-            MG9FRXJQVFVhdUZQeUdKV2JPODBYbUUKjeL1J2QHWGiUiQ+XhVWZuI3L0tbqZmA/
-            sHlS+YU/M3WhP6gE9ChbD4nt4n+BREYu+xHmIoUNGgDDr1ovZ4RoXQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBENGR4SThqVHlpMXdYRXNq
+            VUFjTThobDk5QnRDc2JRN1BLeVlUQUxhM2xFCkxCVTMwLzBobVNzamljaG9YSWkv
+            bE40QUhIcnZIU3laVk5oQzhDUktJb2cKLS0tIDRyb200WU5QUTNkU3l2ZUF3TDJG
+            TEdWQ2UwanFNWm1DQitRRS9WcXBqQkUKdEaizxRiWskBFDC2SC2h1A39W5+PziYP
+            Zm5EPm7iRrmzgYjquhhot92TvTXIqY48mcwXASS2YzNJkCfFeYyGVw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-22T12:38:18Z"
-    mac: ENC[AES256_GCM,data:pwatK/MKhD9d8tvHPbzBebXB8qVCkV3ymyDACurcANDG/9EPRGU5cAzMo+c+KZIWSYLrDH8ar4zBH8PPnSkfpqO5wv6rYiB6cSrORICeM4gQJ9WqvpsamC3z1P967/yodXY2tBUPpoX4RSjhiLOW75atQMc526oVh9RzYCqPAwg=,iv:CnkEb3X6sDsmmEDO0sYiwPSl1nTYLGArG3vtncARupk=,tag:0Ai+oraipgl0XDtHljriBw==,type:str]
+    lastmodified: "2023-11-22T13:07:46Z"
+    mac: ENC[AES256_GCM,data:mvBxqlWsu2j+P8ErwbSuMmDMHjZEIqgfIOQZWEb/F8u7Jm+JRkfUenrU5RLoUpsFv3RFF9vrwbCuvwoIQpiP2KXW0e30u/90aANcRz1hz1WdlNQX/Q5iusB1DNtX4ApxUd3OaJ3C+GcgSmPkHGi5bsB7M2cplpEvbTs9FinLfiE=,iv:V9y+gnxjNyVYi6/Kzpy2h4XfWK6fYdncaFN4G5Y5NCY=,tag:RnXL6+Xmqf53Q1SJsFEtvA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
