--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -56,13 +56,11 @@ spec:
             - receiver: "null"
               matchers:
                 - severity = "info"
-              repeat_interval: 48h           
-            - receiver: "email"
-              matchers: 
-                - alertname =~ "Node down"
-              group_by: ["alertname", "host"]
-              group_wait: 1s
-              group_interval: 1s       
+              repeat_interval: 48h
+            - receiver: "email-project"
+              matchers:
+                - instance =~".*(172.24.22.22:8000|172.24.22.21:8000|conwiki|jira).*"
+            
         inhibit_rules:
           - source_matchers:
               - severity = "critical"
