--- a/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
@@ -1,19 +1,25 @@
 alertmanager:
     config:
         receivers:
-            - name: ENC[AES256_GCM,data:2wqXSQ==,iv:qUg+LmV1aoxyhb3wNOkxLLcJVnUpXJe6XBpZB3ZxQl4=,tag:6b3PP7tLfxkDTXivmXrSbw==,type:str]
-            - name: ENC[AES256_GCM,data:5Hn8qfw=,iv:Ld/A8WaDvQx8bvzN3kgbJVdwK0d59uSlGdM6+YKFh0Y=,tag:PYC/vnmgKgnlbgV0Ae1+3Q==,type:str]
+            - name: ENC[AES256_GCM,data:QHpvZQ==,iv:cjgqTf90ayL6yXBc6QEmIvOlGYDnaPA0a6CHKDKZz6A=,tag:HSSshh01yxru3YjEGmsAKA==,type:str]
+            - name: ENC[AES256_GCM,data:lPVbyFw=,iv:DEx/CK3kw6Z2dicgmdqbb/zvZbPBSy6i2LwzTPFlE7E=,tag:xn+0pB9FGlC97CVg2UdO2Q==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:1gLNt+/ibtPT4h1l1aqNJcH8,iv:0G+ln+BwVy1/Gcg0szq3v05AefXvmUHUWQM3DjpgWuI=,tag:JEjXMpssFHVY0vT7Hi5Yjg==,type:str]
-                  from: ENC[AES256_GCM,data:jwxxsj9qRfgjcxXeH5Qia7X46mcaAx1mi3YA,iv:Fg+oFo6Ca5n07IECQpgC5nhdmi2FFmffC+OeyeE2pIk=,tag:tLBOSo7JndQoKUdHUK4Chg==,type:str]
-                  smarthost: ENC[AES256_GCM,data:uYYhwU70V3U0p71HJ+t0atZS,iv:6w3jqXnWJ6cMNz00sH8UznI2B9CkZKVTBOzixlqAi98=,tag:NxIfHMALncCONPzS2fFG1Q==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:3UzEpQ==,iv:TtVkK3oa6+MXQ7ahHNNmKurXctWfshSwb62JKK3oJZw=,tag:gBMmIohoEMxLIaddGS+NQw==,type:bool]
-            - name: ENC[AES256_GCM,data:FE6xtMUdbg1gEGtwMA==,iv:E2nZyIWetEdGC8FMC4ZStMWddty6VFDelVDZyAw4ZMY=,tag:PSMspiVHehMKNK0u6kFhBw==,type:str]
+                - to: ENC[AES256_GCM,data:3LZkJIUiCggLr6osdblVLgAc,iv:cRrGmrmJqcx2GzaNzFsxHIcliwo1HHKc+3njSUzERE4=,tag:jLaDS4pdkd8Ovo7KFdLvcA==,type:str]
+                  from: ENC[AES256_GCM,data:MDYez4UOJAlAFIUIvez6Qcji+zFqisWe3SDX,iv:tiACbHXhnOu/6O6FbSkMHwX7tmQHySrBe9DPdQiFQ4M=,tag:woNGExfvzoAKgCwmrGNPWA==,type:str]
+                  smarthost: ENC[AES256_GCM,data:AaPF4Fkeiqtn41lxMVDEbIJM,iv:H94cPtlYjzbi5vzHbTizlSuXqT4uP+UPZjOMaHOG3kg=,tag:pjj8mW7Ot9bGto8t9w5b4Q==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:lD0NXA==,iv:50tONVVV2M0V6UtIdA82pqeT6LQbl85jhC2nQSknclk=,tag:oK/sE5dNy9pkkzYPYCffPQ==,type:bool]
+            - name: ENC[AES256_GCM,data:8omwTulRzYJtLTp6bQ==,iv:9tR8WhcXOTXmwBPifY79fM+F7wO+zS2xOJjJid7plHI=,tag:aKsRE6Gjb8gTklH8/hYiuw==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:sR6z9mfKgdrgY9/EgtETbW0pfvSM6EoWMbu8QaG7XrdTEc5Fj9hv8d6qZQxwAfaP4hk4mmNvVfBl8gJ6SJv4,iv:wbXpvg3CLEM9qV2cpvQae+aaSB+LoP6w4LAchppGgLU=,tag:6wDeCnQUfzqWZ2cD1LgSGA==,type:str]
-                  from: ENC[AES256_GCM,data:mLNezs1l7fSHQed2l2cIMtn/1QVuiVWRyNzJ,iv:x4IKTeApXstjiHiTztxkV9Z5cae+cSxTL8HsXPT5ifE=,tag:UNc+GsidN9Y1SbjOTjhHDw==,type:str]
-                  smarthost: ENC[AES256_GCM,data:4sz7nCJVv5mTGbdfODh3W8wA,iv:Nl3nIvpe2d8cdlouKim8MUIT6P1eWaZ/Sh/ELnzBaE8=,tag:qwFr+7KCNKOptIugRxt9Kg==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:A8YtXQ==,iv:D1E0yR9V09bTwrcDgbFu2kv2125cZI2Hjj0AFnYGyIg=,tag:yGHhbZVdO2YvUg//ElLNBA==,type:bool]
+                - to: ENC[AES256_GCM,data:ZDMbM3oyxZK9iudyH9oqCH/GGwq44PmJyqngI4fM0Y53s6DL/ixDbWdA+btakhxbniSW5dGrovfznSG43fZg,iv:M/EfAd9JAaXX2cPu7uJfCnSJG0OqOk2sqjUCk70V4yY=,tag:HCgBYNZEg4abukJTKizveQ==,type:str]
+                  from: ENC[AES256_GCM,data:rT6upDQ0juVzh5Ko0e5ewhF7c1DHM5vDk6Pq,iv:ILj+iUegOPmqUpL1o2ZzUSDoWSv0kk7Mnytsa2ddwJQ=,tag:TU2U7JhRGtszmi2FVDLswQ==,type:str]
+                  smarthost: ENC[AES256_GCM,data:Jc0HWQIMQ7NDnOO3Qydt1lqK,iv:NoIRE1mxkoX/Wcnq3VMMu6su6udvGPCwn/vszUx9cpc=,tag:jucgksFmtHDsNXkB277QKA==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:vV93gw==,iv:Y/GT/nV2B3OSMgd9RAyA1rbzZryLzAn8OUVAZQ+zjcc=,tag:ytJzbsumbfK68j0A8z78mg==,type:bool]
+            - name: ENC[AES256_GCM,data:7v/ip/TXta95Mw==,iv:VYsRLrG2jLOtQCRDTBJaxGx2+WaKScyYSqDVQYRGSp0=,tag:T8bz7kj6azKpYSVDs7k6gw==,type:str]
+              email_configs:
+                - to: ENC[AES256_GCM,data:T4fZxCHRPZdPz94S1lHlMH/L/z7NJNWjWDCwgFY7l1K7TYS7eM6BOYMHZd7mPbUqg+JvqJowCRRcuEIJacLffiDLSqpFHyg3ekxh2JDswOf9zmWX74H4QcyxHCGh/g==,iv:nw9vk8hYW4TBYL0FvRUbsB4BHYr6nRl4HS5FTfTJH2I=,tag:zKmILyL/WsRFn93Z3yg8Og==,type:str]
+                  from: ENC[AES256_GCM,data:b33EE49wgde1A0z8iWtxnyDezmgXquUl8y6n,iv:C1od9iPtDTRp/pG9sxy0DP+NCUi29P6c8tJmisyC7pM=,tag:A/cIZTJvoaM58r7WIBnQrQ==,type:str]
+                  smarthost: ENC[AES256_GCM,data:kUFLw54pfh8/Yit8mdqGb4hR,iv:TpotvcB9GckxjPi8SpOvbEOecNJesFhyvDRKbAhmc8w=,tag:EeCbz/ANA38cWkN9Evn/5g==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:SjFIUA==,iv:fHWjWIvvcLkHV1U2c+ZeXvPRkrgsKolCJBLf3RHAggY=,tag:8hgV2Jy8XnTGaxbTvJOppg==,type:bool]
 sops:
     kms: []
     gcp_kms: []
@@ -23,14 +29,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWWFUrZm9BQWNudDJwTnZk
-            MC9YQ211eTJHakM1a1lUWVFiRFhvVEt0MVR3CkU1cWVxRzdOUjhkNnFHOXZ5T2d0
-            aUI2czByeVpjTlE4cDFIdzRkU3VqSkkKLS0tIDhtU0h0MURsK2liVXhONzl1NDdE
-            T1VwYkJOaDhRdENtWlVNYUo3bnBUWmMK2SopDQE8VqhQH3JpV4C2ewGlp+KZzcPF
-            VJJmCLYLtbBN/bmKvDRVISs7qQEPHpIkgO1mMDgKm1lKiz/Zw/Zktg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxYWIzVkwxc09GK3pzVHkz
+            OFdMcHk5YmpFYjZ0anNSSTlwK1F4ejlGaGk4Ck9LSUd4YW5GNXN0VU1DdVQvcnll
+            L3ZzelpKZDRmc0pDQVVNWkJqSzNVUW8KLS0tIHZ2REhXNXppYkE5WFA3ZzdOamZt
+            c0d5UW1qNmlMbFRHa3pDSm50RkhjcFkKt3SCJO5dZL299R7NClu4IgKpZNsPO/oT
+            NiwPMIolqUDAqwBNWDVqCqoW0Oq8jTI8VYL5YNUm+X7n/xGKmb4Nqg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-24T05:15:47Z"
-    mac: ENC[AES256_GCM,data:Tx8H0VROzRyRlwunXfs45/JWrPfGk4mVcRcF7rZTxq/Skq1Vak9za/+7RtTKvlLlnHHDBNgOdrMezOWrpaQQplHLE2INyKg9oQwgPq7loVzz0nw4rXlTb3Utr/0gv4tlq9Bx/2IJCyKneqVJwICz0u1oJzeqjp3eYnyHEc1kV5A=,iv:LRA+i6DNg5zqHxkmFJtLByeqBBSFBq98ReTw81FeJ7Y=,tag:aDxbhjrSK+TxydXX0ZWI3Q==,type:str]
+    lastmodified: "2023-11-24T14:11:54Z"
+    mac: ENC[AES256_GCM,data:qaAVVvaHJOWlCV4ZxIcrUUF9jIXAv1pu1EeSyglMYA3aLcKQw//fZgWo4mgE3CgPnTPd6cRDLLmQltM1sQw3P6eFwi/0CtvQEGDOdBQAcwjCg4C/1ng52hdIy5sWXsOLzxjNeJaEjpmS/EcKxZWv1bhFQOEo/QqTLsZmNsNGMEk=,iv:vdfXs/fvN9HzWc8/m+deKic4qx+np67TTDl0r/sKUz4=,tag:25ff+x6jCwHDaAU/FGIxgw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
