--- a/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
@@ -1,25 +1,25 @@
 alertmanager:
     config:
         receivers:
-            - name: ENC[AES256_GCM,data:QHpvZQ==,iv:cjgqTf90ayL6yXBc6QEmIvOlGYDnaPA0a6CHKDKZz6A=,tag:HSSshh01yxru3YjEGmsAKA==,type:str]
-            - name: ENC[AES256_GCM,data:lPVbyFw=,iv:DEx/CK3kw6Z2dicgmdqbb/zvZbPBSy6i2LwzTPFlE7E=,tag:xn+0pB9FGlC97CVg2UdO2Q==,type:str]
+            - name: ENC[AES256_GCM,data:QtQ5xQ==,iv:JizdoHEdMSL5Ixg8j62HhfzjTdMCI2i5n0sh+6BvjKY=,tag:virgKJ2jNSlJDxzkg1Ndpg==,type:str]
+            - name: ENC[AES256_GCM,data:huJLlnY=,iv:CrYTsYsqO74QveD8KwmE3BIVHtsGhKOLD5TgTAeSguI=,tag:vGXszd6GQ0JnPcGSa319uA==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:3LZkJIUiCggLr6osdblVLgAc,iv:cRrGmrmJqcx2GzaNzFsxHIcliwo1HHKc+3njSUzERE4=,tag:jLaDS4pdkd8Ovo7KFdLvcA==,type:str]
-                  from: ENC[AES256_GCM,data:MDYez4UOJAlAFIUIvez6Qcji+zFqisWe3SDX,iv:tiACbHXhnOu/6O6FbSkMHwX7tmQHySrBe9DPdQiFQ4M=,tag:woNGExfvzoAKgCwmrGNPWA==,type:str]
-                  smarthost: ENC[AES256_GCM,data:AaPF4Fkeiqtn41lxMVDEbIJM,iv:H94cPtlYjzbi5vzHbTizlSuXqT4uP+UPZjOMaHOG3kg=,tag:pjj8mW7Ot9bGto8t9w5b4Q==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:lD0NXA==,iv:50tONVVV2M0V6UtIdA82pqeT6LQbl85jhC2nQSknclk=,tag:oK/sE5dNy9pkkzYPYCffPQ==,type:bool]
-            - name: ENC[AES256_GCM,data:8omwTulRzYJtLTp6bQ==,iv:9tR8WhcXOTXmwBPifY79fM+F7wO+zS2xOJjJid7plHI=,tag:aKsRE6Gjb8gTklH8/hYiuw==,type:str]
+                - to: ENC[AES256_GCM,data:y9K9sYXC1j6R57OQ9abuZikL,iv:/F7OFYMbk/l9untMpseYddPVEVLFNUsDo9uzYbwphVw=,tag:Au5Ishq/DE38qi62WbNtRA==,type:str]
+                  from: ENC[AES256_GCM,data:K5fpP+RvEeYVH3Ri4bn0o10pwIv+65vUpRAZ,iv:ZPx6Q2N8HwTqDND0G01e8POa1BFEFiv3+93JwuB2Emk=,tag:oQKy3usbs2yM62DttKXiqA==,type:str]
+                  smarthost: ENC[AES256_GCM,data:MLIggkXBnE0SMYPiKwfs/wra,iv:2PJlSryDLFc8FGS9BaEx9C1I1g3n+k5v7Yzk8vcelQw=,tag:pLVFNkLb397ip56TMe0fSQ==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:XNGjNg==,iv:I3FG2N2daawLUJgPpf0C41qVTpzzyjFnDraBPmnQnN8=,tag:uoIJ51c0d9nrSpSzh4jt5g==,type:bool]
+            - name: ENC[AES256_GCM,data:g5WYNm/rKj+h4oZwIQ==,iv:e96TJr2BvRFoKZTjjq0VgcfrvZBmy9FribP2fGcozws=,tag:ufg+kB/4ukwITBz9JJHYIA==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:ZDMbM3oyxZK9iudyH9oqCH/GGwq44PmJyqngI4fM0Y53s6DL/ixDbWdA+btakhxbniSW5dGrovfznSG43fZg,iv:M/EfAd9JAaXX2cPu7uJfCnSJG0OqOk2sqjUCk70V4yY=,tag:HCgBYNZEg4abukJTKizveQ==,type:str]
-                  from: ENC[AES256_GCM,data:rT6upDQ0juVzh5Ko0e5ewhF7c1DHM5vDk6Pq,iv:ILj+iUegOPmqUpL1o2ZzUSDoWSv0kk7Mnytsa2ddwJQ=,tag:TU2U7JhRGtszmi2FVDLswQ==,type:str]
-                  smarthost: ENC[AES256_GCM,data:Jc0HWQIMQ7NDnOO3Qydt1lqK,iv:NoIRE1mxkoX/Wcnq3VMMu6su6udvGPCwn/vszUx9cpc=,tag:jucgksFmtHDsNXkB277QKA==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:vV93gw==,iv:Y/GT/nV2B3OSMgd9RAyA1rbzZryLzAn8OUVAZQ+zjcc=,tag:ytJzbsumbfK68j0A8z78mg==,type:bool]
-            - name: ENC[AES256_GCM,data:7v/ip/TXta95Mw==,iv:VYsRLrG2jLOtQCRDTBJaxGx2+WaKScyYSqDVQYRGSp0=,tag:T8bz7kj6azKpYSVDs7k6gw==,type:str]
+                - to: ENC[AES256_GCM,data:Fn9FlodcnuME1VcaHC9DCp23lsPjXEVg/TrWSlCeKNjcf3QqA5BEHt06REa0c2YK9Z76KYmLU0kOn+9cNrQA,iv:mQ+eanNOPWLn/huN4b/6tG3liBK9vnGzOx4HKhNwqqo=,tag:oFNrqlddr3aocMMpJrR7wQ==,type:str]
+                  from: ENC[AES256_GCM,data:I27OZAiQb6qFUJmzYtUV6ioYMhVgFEa+sOYT,iv:wZEyn8RKIWEuPowN8Vlz5T/u8MsrvlJulhmo6uPLK1s=,tag:iCDV8oW2kXhNl8fImqDgEQ==,type:str]
+                  smarthost: ENC[AES256_GCM,data:NdH7T8I4Xxu4IVVV1Fmf6pR/,iv:CHDji1W6zeH4ZAg2NFrufSGFf+hdkkzAVkJljjsev7c=,tag:iKfywPfaKijqfdiHXvVm3g==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:hbUQ5A==,iv:RqmbEparQo3FLNn8CxQ+BBxLcTJMskmjT0GuCofbBQw=,tag:nJUHv7riF9SNne8q/+QIkw==,type:bool]
+            - name: ENC[AES256_GCM,data:Th+dUKi4+b4F5Q==,iv:7A5LykzaCHxwMKoK2R5H4dVa4FeHdPWTM6hiR/O3ct4=,tag:OL3kgk0CKZDo66wVsqrEmw==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:T4fZxCHRPZdPz94S1lHlMH/L/z7NJNWjWDCwgFY7l1K7TYS7eM6BOYMHZd7mPbUqg+JvqJowCRRcuEIJacLffiDLSqpFHyg3ekxh2JDswOf9zmWX74H4QcyxHCGh/g==,iv:nw9vk8hYW4TBYL0FvRUbsB4BHYr6nRl4HS5FTfTJH2I=,tag:zKmILyL/WsRFn93Z3yg8Og==,type:str]
-                  from: ENC[AES256_GCM,data:b33EE49wgde1A0z8iWtxnyDezmgXquUl8y6n,iv:C1od9iPtDTRp/pG9sxy0DP+NCUi29P6c8tJmisyC7pM=,tag:A/cIZTJvoaM58r7WIBnQrQ==,type:str]
-                  smarthost: ENC[AES256_GCM,data:kUFLw54pfh8/Yit8mdqGb4hR,iv:TpotvcB9GckxjPi8SpOvbEOecNJesFhyvDRKbAhmc8w=,tag:EeCbz/ANA38cWkN9Evn/5g==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:SjFIUA==,iv:fHWjWIvvcLkHV1U2c+ZeXvPRkrgsKolCJBLf3RHAggY=,tag:8hgV2Jy8XnTGaxbTvJOppg==,type:bool]
+                - to: ENC[AES256_GCM,data:/7NtXTxlVQhp1ZO2thO4xGk7jgn2siKB0qvdldh1zCMX6eSmLW5Sk7xMdUxY+HzsBE6pMdFKyxyE1Ki/o6EGovG346aaYi4OPFhU0o2n6dNZYPG9oNkNTVOMtVJG,iv:5v3pY+ywjquGuPhReFGBYgNC0tXz9TxgTkQB9xkaxjE=,tag:r7/mrPLY5kRo9G6tt0niQg==,type:str]
+                  from: ENC[AES256_GCM,data:44FKM6e8GLoCATKQ7QVAgGQEyKnMU65p60iW,iv:KJ46Fakyv2kiIINLPeXAh0QKTS/TiRhM/5JMOXnruTU=,tag:pfV0apaE88mKKJFpMpVmxw==,type:str]
+                  smarthost: ENC[AES256_GCM,data:vCvlGA4pjJL2iY38QP1DjmLm,iv:sz9ZaJKmpRWKO9VTMj4sFKw1XZkLv+MfYf9ctRFjL4U=,tag:zp2eH3Zw/OHLxm2XSkO+2Q==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:HLr/Bw==,iv:waAn7m3P0zGWzI3Q1xZ9mDnXfyripADREF/PnHrjGVE=,tag:rSoafF20MMg4Ll74NwZpdA==,type:bool]
 sops:
     kms: []
     gcp_kms: []
@@ -29,14 +29,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxYWIzVkwxc09GK3pzVHkz
-            OFdMcHk5YmpFYjZ0anNSSTlwK1F4ejlGaGk4Ck9LSUd4YW5GNXN0VU1DdVQvcnll
-            L3ZzelpKZDRmc0pDQVVNWkJqSzNVUW8KLS0tIHZ2REhXNXppYkE5WFA3ZzdOamZt
-            c0d5UW1qNmlMbFRHa3pDSm50RkhjcFkKt3SCJO5dZL299R7NClu4IgKpZNsPO/oT
-            NiwPMIolqUDAqwBNWDVqCqoW0Oq8jTI8VYL5YNUm+X7n/xGKmb4Nqg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3Zk1EMnlUNU1TaWp1N2k4
+            VDFzVXIrRXo3Um5XMnU1TWFqSXp0QW9SU1Y0CnAzWHUvTDlLNW9aYnBLZ3dzYkhD
+            TDFOeHMzZEFiNUxJWjJMUyt2bjRXTk0KLS0tIDFDQzc0QVc5SWhveElUazRUNHBQ
+            NlYybWtmSWYwWFNwd20rZGc4VVlBUkUKYbg93C9QhGryCDPXrbxw21D9xaaRsQ7+
+            Hl2IM06Vax3jgCxYY3ImH2RQpeSgBeBIwfF1UDpxzH4hFkR3NEyv9w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-24T14:11:54Z"
-    mac: ENC[AES256_GCM,data:qaAVVvaHJOWlCV4ZxIcrUUF9jIXAv1pu1EeSyglMYA3aLcKQw//fZgWo4mgE3CgPnTPd6cRDLLmQltM1sQw3P6eFwi/0CtvQEGDOdBQAcwjCg4C/1ng52hdIy5sWXsOLzxjNeJaEjpmS/EcKxZWv1bhFQOEo/QqTLsZmNsNGMEk=,iv:vdfXs/fvN9HzWc8/m+deKic4qx+np67TTDl0r/sKUz4=,tag:25ff+x6jCwHDaAU/FGIxgw==,type:str]
+    lastmodified: "2023-11-24T21:06:09Z"
+    mac: ENC[AES256_GCM,data:1dLtv9XdAj1yEK71AoLBIMiCLDHjBu4ujup/9IZJPFA/Qpv/HC2faIa8q77k7Ya39QwDrybtOpdA2dGnj45xuNaYnvgvTUQMl6ANiuCHMQ3boOo/PTwKJ5JiXg4A8hatn/FThZoKt2NWuJN474G0IGFmLr2+A8S7U913ekpEn1Q=,iv:SObr7PjJU9bT1hxP3avZ0ESN1TZ9g3TC3bV1XUw8ftM=,tag:lNFCgiV09aMWdE11UM8JwA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
