remove dev cluster

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -9,7 +9,7 @@ jobs:
   components:
     strategy:
       matrix:
-        cluster: [development, production]
+        cluster: [production]
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
