add some more monitoring

--- a/clusters/production/monitoring/kube-prometheus-stack/kustomization.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - rules/kured.yaml
   - rules/system.yaml
   - rules/blackbox.yaml
+  - targets/flux.yaml
 secretGenerator:
   - name: prometheus-values
     files:
