--- a/clusters/production/monitoring/kube-prometheus-stack/rules/kured.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/rules/kured.yaml
@@ -9,7 +9,7 @@ metadata:
   namespace: monitoring
 spec:
   groups:
-    - name: kured.rules
+    - name: Kured Rules
       rules:
         - alert: RebootRequired
           annotations:
