--- a/clusters/production/monitoring/kube-prometheus-stack/kustomization.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/kustomization.yaml
@@ -4,8 +4,9 @@ namespace: monitoring
 resources:
   - helm.yaml
   - rules/kured.yaml
-  - rules/system.yaml
+  - rules/node.yaml
   - rules/blackbox.yaml
+  - rules/sso.yaml
   - targets/flux.yaml
 secretGenerator:
   - name: prometheus-values
