Fix inhibit rules for vms

--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -69,7 +69,7 @@ spec:
               - severity = "critical"
             target_matchers:
               - severity = "warning"
-            equal: ["alertname", "namespace"]
+            equal: ["alertname", "instance"]
       alertmanagerSpec:
         replicas: 1
         podAntiAffinity: hard
