(re)enable alerting

--- a/clusters/production/monitoring/grafana/helm.yaml
+++ b/clusters/production/monitoring/grafana/helm.yaml
@@ -36,7 +36,7 @@ spec:
       enabled: false
     grafana.ini:
         unified_alerting:
-          enabled: false
+          enabled: true
           ha_peers: grafana-headless:9094
           ha_listen_address: ${POD_IP}:9094
           ha_advertise_address: ${POD_IP}:9094
