--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -31,6 +31,10 @@ spec:
     nodeExporter:
       enabled: false
     alertmanager:
+      service:
+        annotations:
+          tailscale.com/expose: "true"
+          tailscale.com/tags: "tag:k8s,tag:k8s-monitoring"
       config:
         global:
           resolve_timeout: 3m
